Common Runway/Gate usage classes
git-svn-id: file:///home/svn/DVA2006@19051 1e6d2d28-e1fb-0310-b8ab-81908d8c6b6a